GitHub Statsを追加 (#8)
* add: Tag

* update: openapi.yml

* add: Stats

* update: Biography

* fix: swagger-codegen-cli config

* fix: ignore @types

* mv: tags to chips

* fix: swagger
