# swagger/openapi.yml
@@ -1,4 +1,4 @@
-openapi: "3.0.0"
+openapi: 3.0.0
 info:
   description: This is a Skillme API Document.
   version: 1.0.0
@@ -9,42 +9,8 @@ info:
     name: Apache 2.0
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
 servers:
-  - url: "http://localhost:8080"
+  - url: "http://localhost:8080/api/v1"
 paths:
-  "/members/{memberId}/stamps":
-    get:
-      summary: Get a member got stamps
-      tags: []
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Stamp"
-              examples:
-                example:
-                  value:
-                    design: 49.57
-                    implementation: 30.28
-                    communication: 20.15
-        "400":
-          description: Bad Request
-        "401":
-          description: Unauthorized
-        "404":
-          description: Not Found
-      operationId: getMemberStampsById
-      description: Get a member got stamps.
-      x-internal: false
-      parameters: []
-    parameters:
-      - schema:
-          type: integer
-        name: memberId
-        in: path
-        description: memberId
-        required: true
   "/members/{memberId}/skillScores":
     parameters:
       - schema:
@@ -77,7 +43,7 @@ paths:
           description: Not Found
       operationId: getMemberSkillScoreById
       description: Get a member skill score.
-  "/members/{memberId}/threads":
+  "/members/{memberId}/messages":
     parameters:
       - schema:
           type: string
@@ -86,7 +52,7 @@ paths:
         required: true
         description: memberId
     get:
-      summary: Get a member threads.
+      summary: Get a member messages.
       tags: []
       responses:
         "200":
@@ -94,33 +60,71 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Thread"
+                type: object
+                properties:
+                  top_communication_message:
+                    $ref: "#/components/schemas/Message"
+                  top_implementation_message:
+                    $ref: "#/components/schemas/Message"
+                  top_design_message:
+                    $ref: "#/components/schemas/Message"
+                required:
+                  - top_communication_message
+                  - top_implementation_message
+                  - top_design_message
               examples:
                 example:
                   value:
-                    - username: hirokikondo86
-                      sendDate: "2019-08-24T14:15:22Z"
-                      tag: design
-                      description: string
+                    top_communication_message:
+                      url: string
+                      text: string
                       stamps:
-                        "+1": 0
-                        "-1": 0
-                        laugh: 0
-                        hooray: 0
-                        confused: 0
-                        heart: 0
-                        rocket: 0
-                        eyes: 0
+                        good_count: 0
+                        bad_count: 0
+                        laugh_count: 0
+                        hooray_count: 0
+                        confused_count: 0
+                        heart_count: 0
+                        rocket_count: 0
+                        eyes_count: 0
+                      created_at: "2019-08-24T14:15:22Z"
+                      updated_at: "2019-08-24T14:15:22Z"
+                    top_implementation_message:
+                      url: string
+                      text: string
+                      stamps:
+                        good_count: 0
+                        bad_count: 0
+                        laugh_count: 0
+                        hooray_count: 0
+                        confused_count: 0
+                        heart_count: 0
+                        rocket_count: 0
+                        eyes_count: 0
+                      created_at: "2019-08-24T14:15:22Z"
+                      updated_at: "2019-08-24T14:15:22Z"
+                    top_design_message:
+                      url: string
+                      text: string
+                      stamps:
+                        good_count: 0
+                        bad_count: 0
+                        laugh_count: 0
+                        hooray_count: 0
+                        confused_count: 0
+                        heart_count: 0
+                        rocket_count: 0
+                        eyes_count: 0
+                      created_at: "2019-08-24T14:15:22Z"
+                      updated_at: "2019-08-24T14:15:22Z"
         "400":
           description: Bad Request
         "401":
           description: Unauthorized
         "404":
           description: Not Found
-      operationId: getMemberThreadsById
-      description: Get a member threads.
+      operationId: getMemberMessagesById
+      description: Get a member messages.
   "/members/{memberId}":
     parameters:
       - schema:
@@ -146,6 +150,8 @@ paths:
                     id: 1
                     avatar_url: "http://example.com"
                     url: "http://github.com/hirokikondo86"
+                    join_date: 2021.4 ~ now
+                    chips: []
         "400":
           description: Bad Request
         "401":
@@ -174,6 +180,8 @@ paths:
                       id: 1
                       avatar_url: "http://example.com"
                       url: "http://github.com/hirokikondo86"
+                      join_date: 2021.4 ~ now
+                      chips: []
         "400":
           description: Bad Request
         "401":
@@ -182,32 +190,8 @@ paths:
           description: Not Found
       operationId: getMembers
       description: Get members.
-
 components:
   schemas:
-    Stamp:
-      title: Stamp
-      description: Statmp member got
-      type: object
-      required:
-        - design
-        - implementation
-        - communication
-      properties:
-        design:
-          type: number
-          format: float
-        implementation:
-          type: number
-          format: float
-        communication:
-          type: number
-          format: float
-      x-examples:
-        example:
-          design: 49.57
-          implementation: 30.28
-          communication: 20.15
     SkillScore:
       title: SkillScore
       description: Member skill score
@@ -231,93 +215,85 @@ components:
           design: 5
           implementation: 3.5
           communication: -2
-    Thread:
-      title: Thread
+    Message:
+      title: Message
       type: object
-      description: Thread sent by member
-      required:
-        - username
-        - sendDate
-        - tag
-        - description
-        - stamps
+      description: Message sent by member
+      x-examples:
+        example:
+          url: string
+          text: string
+          stamps:
+            good_count: 0
+            bad_count: 0
+            laugh_count: 0
+            hooray_count: 0
+            confused_count: 0
+            heart_count: 0
+            rocket_count: 0
+            eyes_count: 0
+          created_at: "2019-08-24T14:15:22Z"
+          updated_at: "2019-08-24T14:15:22Z"
       properties:
-        username:
+        url:
           type: string
-        sendDate:
-          type: string
-          format: date-time
-        tag:
-          $ref: "#/components/schemas/SkillTag"
-        description:
+        text:
           type: string
           nullable: true
         stamps:
           type: object
           required:
-            - good
-            - bad
-            - laugh
-            - hooray
-            - confused
-            - heart
-            - rocket
-            - eyes
+            - good_count
+            - bad_count
+            - laugh_count
+            - hooray_count
+            - confused_count
+            - heart_count
+            - rocket_count
+            - eyes_count
           properties:
-            # MEMO: GitHub APIに合わせて"+1","-1"にしたかったが、 generateした際に"_1"に変換されて
-            # openapi.validator: validation errors が発生するのでgood, badに変更
-            good:
+            good_count:
               type: number
-            bad:
+            bad_count:
               type: number
-            laugh:
+            laugh_count:
               type: number
-            hooray:
+            hooray_count:
               type: number
-            confused:
+            confused_count:
               type: number
-            heart:
+            heart_count:
               type: number
-            rocket:
+            rocket_count:
               type: number
-            eyes:
+            eyes_count:
               type: number
-      x-examples:
-        example:
-          username: hirokikondo86
-          sendDate: "2019-08-24T14:15:22Z"
-          tag: communication
-          description: string
-          stamps:
-            good: 0
-            bad: 0
-            laugh: 0
-            hooray: 0
-            confused: 0
-            heart: 0
-            rocket: 0
-            eyes: 0
-    SkillTag:
-      title: SkillTag
-      description: Skill tag
-      type: string
-      oneOf:
-        - properties: {}
-          enum:
-            - design
-            - implementation
-            - communication
-      x-examples:
-        example: design
+        created_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
+      required:
+        - url
+        - text
+        - stamps
+        - created_at
+        - updated_at
     Member:
       title: Member
       type: object
       description: Member
-      required:
-        - login
-        - id
-        - avatar_url
-        - url
+      x-examples:
+        example:
+          login: hirokikondo86
+          id: 1
+          avatar_url: "https://github.com/hirokikondo86/avatar"
+          url: "https://github.com/hirokikondo86"
+          join_date: 2021.4 ~ now
+          chips:
+            - value: string
+              color: blue
       properties:
         login:
           type: string
@@ -330,9 +306,41 @@ components:
         url:
           type: string
           format: uri
+        join_date:
+          type: string
+        chips:
+          type: array
+          items:
+            $ref: "#/components/schemas/Chip"
+          nullable: true
+      required:
+        - login
+        - id
+        - avatar_url
+        - url
+        - join_date
+        - chips
+    Chip:
+      title: Chip
+      type: object
+      properties:
+        value:
+          type: string
+        color:
+          type: string
+          enum:
+            - blue
+            - lightBlue
+            - green
+            - yellowGreen
+            - yellow
+            - orange
+            - red
+      required:
+        - value
+        - color
       x-examples:
         example:
-          login: hirokikondo86
-          id: 1
-          avatar_url: https://github.com/hirokikondo86/avatar
-          url: https://github.com/hirokikondo86
+          value: フルサイクルエンジニア
+          color: blue
+      description: Chip
